# rmeter

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: release.yml
crates/rmeter-cli/: Cargo.toml
crates/rmeter-cli/src/: main.rs
crates/rmeter-cli/tests/: cli_integration.rs
crates/rmeter-core/: Cargo.toml
crates/rmeter-core/src/: error.rs  lib.rs
crates/rmeter-core/src/assertions/: mod.rs
crates/rmeter-core/src/engine/: aggregator.rs  executor.rs  mod.rs  virtual_user.rs
crates/rmeter-core/src/extractors/: functions.rs  mod.rs
crates/rmeter-core/src/http/: client.rs  graphql.rs  history.rs  mod.rs  request.rs  response.rs  websocket.rs
crates/rmeter-core/src/plan/: io.rs  jmx.rs  manager.rs  mod.rs  model.rs  templates.rs  validation.rs
crates/rmeter-core/src/results/: export.rs  mod.rs
crates/rmeter-core/tests/fixtures/: sample.jmx
crates/rmeter-mcp/: Cargo.toml
crates/rmeter-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
crates/rmeter-tauri/: Cargo.toml  tauri.conf.json
crates/rmeter-tauri/capabilities/: default.json
crates/rmeter-tauri/src/: lib.rs  main.rs
crates/rmeter-tauri/src/commands/: engine.rs  mod.rs  plan.rs  protocol.rs  request.rs  results.rs
docs/: JMETER_COMPARISON.md
src/: App.tsx
src/components/dashboard/: ActiveThreadsChart.tsx  ErrorRateChart.tsx  LiveStatsBar.tsx  ResponseTimeChart.tsx  ThroughputChart.tsx
src/components/engine/: ComparisonDialog.tsx  EngineControlBar.tsx  ExportBar.tsx  RecentResultsLog.tsx  RequestInspector.tsx  ResultHistory.tsx  TestSummaryPanel.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/plan/: AssertionEditor.tsx  CsvDataSourceEditor.tsx  ExtractorEditor.tsx  PlanList.tsx  PlanProperties.tsx  PlanTree.tsx  RequestProperties.tsx  TemplateDialog.tsx  ThreadGroupProperties.tsx  TreeNode.tsx  VariableEditor.tsx
src/components/ui/: button.tsx
src/hooks/: useEngineEvents.ts  useTauriEvent.ts
src/lib/: commands.ts  parseCurl.ts
src/pages/: GraphQLPage.tsx  RequestPage.tsx  ResultsPage.tsx  TestPlansPage.tsx  WebSocketPage.tsx
src/stores/: useAppStore.test.ts  useAppStore.ts  useEngineStore.test.ts  useEngineStore.ts  usePlanStore.test.ts  usePlanStore.ts  useRequestStore.test.ts  useRequestStore.ts
src/test/: setup.ts
src/types/: engine.ts  plan.ts  request.ts  results.ts
