[package]
name = "rmeter-cli"
version = "0.1.0"
edition = "2021"
description = "Headless CLI for rmeter load testing"

[[bin]]
name = "rmeter-cli"
path = "src/main.rs"

[dependencies]
rmeter-core = { path = "../rmeter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
