[package]
name = "rmeter-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rmeter-mcp"
path = "src/main.rs"

[dependencies]
rmeter-core = { path = "../rmeter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
