[package]
name = "rmeter-tauri"
version = "0.1.0"
edition = "2021"

# Disable the console window on Windows release builds
[[bin]]
name = "rmeter-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rmeter-core = { path = "../rmeter-core" }
